awaiting php integration

--- a/MZAZI PROJECT/MZAZI FRONT PAGE.html
+++ b/MZAZI PROJECT/MZAZI FRONT PAGE.html
@@ -17,7 +17,7 @@
         </div>
         <ul id="menuItems">
             <li><a href="Mzazi about page.html" id="infoBtn">Who we are</a></li>
-            <li><a href="mzazicontacts.html" id="contactsBtn">Contact</a></li>
+            <li><a href="mzazicontacts.html" id="contactsBtn">Contact us</a></li>
             <li><a href="mzazi sign up page.html" class="button">Sign up</a></li>
             <li><a href="mzazi log in page.html" class="button">log in</a></li>
         </ul>
