--- a/MZAZI PROJECT/mzazicontacts.html
+++ b/MZAZI PROJECT/mzazicontacts.html
@@ -46,7 +46,7 @@
                 <!-- Contact Us Section -->
                 <div class="contact-us">
                   <h3>Contact us</h3>
-                  <p><a href="mailto:email@example.com">📧 Email us</a></p>
+                  <p><a href="mailto:mzaziteam@example.com">📧 Email us</a></p>
                   <p><a href="tel:+25412346">📞 Call us</a></p>
                 </div>
           
