Final changes on my end, see full product : http://192.168.1.104/MZAZI PROJECT

--- a/MZAZI PROJECT/MZAZI FRONT PAGE.html
+++ b/MZAZI PROJECT/MZAZI FRONT PAGE.html
@@ -18,15 +18,15 @@
         <ul id="menuItems">
             <li><a href="Mzazi about page.html" id="infoBtn">Who we are</a></li>
             <li><a href="mzazicontacts.html" id="contactsBtn">Contact us</a></li>
-            <li><a href="mzazi sign up page.html" class="button">Sign up</a></li>
-            <li><a href="mzazi log in page.html" class="button">log in</a></li>
+            <li><a href="register.php" class="button">Sign up</a></li>
+            <li><a href="login.php" class="button">log in</a></li>
         </ul>
     </nav>
 
     <!-- Hero Section -->
     <section class="hero">
         <h1>M-ZAZI serves as an indispensable companion for families managing both professional and personal obligations.</h1>
-        <a href="mzazi log in page.html" class="button">Browse our page</a>
+        <a href="login.php" class="button">Browse our page</a>
 
          <!-- Testimonials/reviews -->
          <section class="testimonials">
