--- a/MZAZI PROJECT/Mzazi about page.html
+++ b/MZAZI PROJECT/Mzazi about page.html
@@ -24,14 +24,15 @@
         <section class="hero">
             <h1>About</h1>
             <div class="image-grid">
-                <img src="c:\Users\mikik\Downloads\mzazi pet sitting.jpeg" alt="Pet Sitting" class="hero-image">
-                <img src="c:\Users\mikik\Downloads\mzazi baby sitting.jpeg" alt="Baby Sitting" class="hero-image">
+                <img src="mzazi pet sitting.jpeg" alt="Pet Sitting" class="hero-image">
+                <img src="mzazi baby sitting.jpeg" alt="Baby Sitting" class="hero-image">
+                <img src="mzazi errands.jpeg" alt="Errand running" class="hero-image">
             </div>
 
             <div class="hero-content">
                 <h2>About M-ZAZI</h2>
                 <p>M-ZAZI is your go-to platform for simplifying family life! We connect busy parents with trusted caregivers for babysitting, pet sitting, and errand-running services. Our mission is to provide peace of mind and flexibility with reliable, quality care—all in a safe, supportive environment.</p>
-                <a href="mzazi log in page.html" class="button order-now">Order Now</a>
+                <a href="mzazi services and orders.html" class="button order-now">Order Now</a>
             </div>
         </section>
 
