Final changes here: http://192.168.1.104/MZAZI%20PROJECT/

--- a/MZAZI PROJECT/Mzazi about page.html
+++ b/MZAZI PROJECT/Mzazi about page.html
@@ -44,7 +44,7 @@
                 <span>- Grace K.</span>
             </div>
             <div class="testimonial">
-                <p>"Reliable and convenient. Highly recommend their services!"</p>
+                <p>"Reliable and convenient. Highly recommend their services! Satisfied"</p>
                 <span>- David O.</span>
             </div>
         </section>
