--- a/MZAZI PROJECT/MZAZI FRONT PAGE.html
+++ b/MZAZI PROJECT/MZAZI FRONT PAGE.html
@@ -24,7 +24,8 @@
 
     <!-- Hero Section -->
     <section class="hero">
-        <h1>M-ZAZI serves as an indispensable companion for families managing both professional and personal obligations.</h1>
+        <h1>Your trusted assistant for baby-sitting,pet sitting, and errand running services.
+            M-ZAZI serves as an indispensable companion for families managing both professional and personal obligations.</h1>
         <a href="login.php" class="button">Browse our page</a>
 
          <!-- Testimonials/reviews -->
